--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Log in</h2>
                 <form action="/login" method="POST">
                     <div class="mb-4">
-                        <div class="px-3 py-8 font-semibold rounded custom-btn">
+                        <div class="px-3 py-8 font-semibold rounded gold-btn">
                             <label class="block mb-4 text-sm text-black font-raleway" for="username">USERNAME</label>
                             <input
                                 class="w-full px-3 py-2 mb-4 leading-tight text-gray-700 border-none rounded shadow appearance-none focus:outline-none focus:shadow-outline"
