--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Table Example</title>
+  <title>Movies List</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link rel="stylesheet" href="/styles/style.css">
@@ -11,61 +11,60 @@
 </head>
 
 <body class="bg-black font-raleway text-cfab7a">
-  <div class="absolute top-0 left-0 m-4 ">
+  <header class="px-16 py-6">
     <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
-  </div>
-  <div class="p-4 text-right">
-    <a href="/admin/movies/add"
-      class="inline-block px-4 py-2 mb-4 text-white bg-blue-500 rounded-md hover:bg-blue-700">Add New Item</a>
-  </div>
+  </header>
   <div class="flex justify-center">
     <div class="relative w-full max-w-screen-xl overflow-x-auto overflow-y-auto rounded-lg shadow md:max-w-screen-2xl">
-      <table class="relative w-full whitespace-no-wrap border-2 border-white table-auto table-striped">
+      <div class="flex justify-end">
+        <a href="/admin/movies/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Item</a>
+      </div>
+      <table class="relative w-full whitespace-no-wrap border-2 border-gold table-auto table-striped">
         <thead>
-          <tr class="text-left">
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Name</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Genre</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Duration</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Release Date</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Synopsis</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Status</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Trailer Link</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Rating</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Image</th>
-            <th class="sticky top-0 px-3 py-2 border-2 border-gray-200">Actions</th>
+          <tr class="text-left border-gold">
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Name</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Genre</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Duration</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Release Date</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Synopsis</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Status</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Trailer Link</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Rating</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Image</th>
+            <th class="sticky top-0 px-3 py-2 border-2 border-gold">Actions</th>
           </tr>
         </thead>
         <tbody>
           <% movies.forEach(function(movie) { %>
-            <tr class="border-2 border-gray-200">
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+            <tr class="border-2 border-gold">
+              <td class="px-3 py-2 border-2 border-gold ">
                 <%= movie.title %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="px-3 py-2 border-2 border-gold ">
                 <%= movie.genre %>
               </td>
-              <td class=" border-2 border-gray-200 px-3 py-2 min-w-[150px]">
+              <td class="border-gold border-2 px-3 py-2 min-w-[150px]">
                 <%= movie.duration %>
               </td>
-              <td class=" border-2 border-gray-200 px-3 py-2 min-w-[150px]">
+              <td class="border-gold border-2 px-3 py-2 min-w-[150px]">
                 <%= movie.release_date %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="border-goldpx-3 py-2 border-2 border-gold">
                 <%= movie.synopsis %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="px-3 py-2 border-2 border-gold">
                 <%= movie.status %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="px-3 py-2 border-2 border-gold">
                 <%= movie.trailer_link %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="px-3 py-2 border-2 border-gold">
                 <%= movie.rating %>
               </td>
-              <td class="px-3 py-2 border-2 border-gray-200 ">
+              <td class="px-3 py-2 border-2 border-gold">
                 <img src='/images/<%= movie.images %> ' class="w-16 h-24">
               </td>
-              <td class="flex items-center px-3 py-2 space-x-2 border-t border-gray-200 ">
+              <td class="flex items-center px-3 py-2 space-x-2 border-t border-gold">
                 <a href="/admin/movies/edit/<%= movie.movie_id %>"
                   class="text-blue-500 underline hover:text-blue-700">Edit</a>
                 <form action="/delete-movie/<%= movie.movie_id %>" method="post" class="inline">
